deploy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: levinkeller-de
  namespace: levinkeller-de
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: levinkeller-de
  template:
    metadata:
      labels:
        app: levinkeller-de
    spec:
      containers:
      - name: app
        image: ghcr.io/levino/levinkeller.de
        imagePullPolicy: Always
        ports:
        - containerPort: 80
