deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: levinkeller-de
  namespace: levinkeller-de
spec:
  type: ClusterIP
  selector:
    app: levinkeller-de
  ports:
  - port: 80
    targetPort: 80
