deploy/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: levinkeller-de
  namespace: levinkeller-de
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  rules:
  - host: levinkeller.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: levinkeller-de
            port:
              number: 80
  - host: www.levinkeller.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: levinkeller-de
            port:
              number: 80
  tls:
  - hosts:
    - levinkeller.de
    - www.levinkeller.de
    secretName: levinkeller-de-tls
